refactor：修改了改为jdk8 后，出错的地方